:sparkles: : Add resource pack for totem of drop inventory and totem of keep inventory

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,5 +24,6 @@ jobs:
       - name: Archive built jar
         uses: actions/upload-artifact@v3
         with:
-          name: Built Jar
-          path: build/libs/*.jar
+          path: |
+            build/libs/*.jar
+            build/resourcePack/*.jar
