✨ : Add keep/drop totem functionality

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 # What happen to inventory on death, possible values:
 # DEFAULT : Minecraft default
+# TOTEM : CLEAR + totem
 # CLEAR : Clear inventory on death
 # KEEP : Keep inventory on death
 inventoryOnDeath: DEFAULT
